Keep only what a distributed tool needs: directives decide, options only tune the run
The options that let a user override what the tool's author wrote into the
script are gone: --java, --main, --module, --deps, --repos, -C,
--enable-preview, --cds, -ea and -esa. What remains tunes the run
(--verbose, --quiet, --fresh, --offline, -D, -R, --) or answers about the
installation (--help, --version, --update).

Gone with them, as nothing a tool distributed in its own repository needs:
scripts from stdin or a process substitution, //MODULE and the module-info
generation (ModuleUtil), //CDS, //JAVAAGENT and the agent class search,
//GAV and //DESCRIPTION and the pom.xml written into the jar, //DOCS,
//DEPS on a .java file (sub-projects), the JBANG_JDK_DISTRO and
JBANG_JDK_INDEX overrides with the Alpine special case, and the
JBANG_RUNTIME_SHELL variable no launcher sets any more. The directives are
still parsed, by the mirrored parser, and ignored.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01R3xSSwJLoriFc3sgc2RgkR