@@ -1,24 +1,18 @@
 package dev.jbang;
 
-import java.io.ByteArrayOutputStream;
 import java.io.FileDescriptor;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.PrintStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 import dev.jbang.source.AppBuilder;
 import dev.jbang.source.CmdGenerator;
 import dev.jbang.source.Project;
@@ -34,12 +28,12 @@ import dev.jbang.util.Util;
  *
  * There are no subcommands: JBangLite does one thing, which is to build the
  * script and run it, and <code>--help</code> and <code>--version</code> are
- * the only options that do something else. Options are read, getopt style, up
- * to the script: every option is accepted anywhere before it, <code>--</code>
- * ends them, and everything after the script belongs to the script. The script
- * is a <code>.java</code> file, or <code>-</code> for stdin; a path that is
- * not a regular file but can be read (a process substitution, a pipe) is read
- * like stdin.
+ * the only options that do something else. Everything about the script - its
+ * Java version, dependencies, main class - is what its <code>//</code>
+ * directives say; the options only tune the run. They are read getopt style,
+ * up to the script: every option is accepted anywhere before it,
+ * <code>--</code> ends them, and everything after the script belongs to the
+ * script.
  *
  * The script runs as a child process with this process's stdin, stdout and
  * stderr; its exit status becomes this process's exit status. The launcher
@@ -83,9 +77,6 @@ public final class Main {
 		List<String> cmd = new CmdGenerator(prj, jar)
 			.arguments(opts.userArgs)
 			.runtimeOptions(opts.runtimeOptions)
-			.assertions(opts.enableAssertions)
-			.systemAssertions(opts.enableSystemAssertions)
-			.classDataSharing(opts.cds)
 			.generate();
 		Util.verboseMsg("run: " + CommandBuffer.of(cmd).asCommandLine());
 		return execute(cmd);
@@ -93,18 +84,8 @@ public final class Main {
 
 	/** The options, all of them; there is no command word to split them by. */
 	private static final class ScriptOptions {
-		String javaVersion;
-		String mainClass;
-		String moduleName;
-		final List<String> deps = new ArrayList<>();
-		final List<String> repos = new ArrayList<>();
 		final Map<String, String> properties = new LinkedHashMap<>();
 		final List<String> runtimeOptions = new ArrayList<>();
-		final List<String> compileOptions = new ArrayList<>();
-		boolean enablePreview;
-		boolean enableAssertions;
-		boolean enableSystemAssertions;
-		boolean cds;
 		String script;
 		final List<String> userArgs = new ArrayList<>();
 
@@ -125,41 +106,6 @@ public final class Main {
 					value = a.substring(eq + 1);
 				}
 				switch (key) {
-				case "--java":
-				case "-j":
-					o.javaVersion = value != null ? value : next(args, i++, key);
-					break;
-				case "--main":
-				case "-m":
-					o.mainClass = value != null ? value : next(args, i++, key);
-					break;
-				case "--deps":
-					o.deps.addAll(Arrays.asList((value != null ? value : next(args, i++, key)).split(",")));
-					break;
-				case "--repos":
-					o.repos.addAll(Arrays.asList((value != null ? value : next(args, i++, key)).split(",")));
-					break;
-				case "--module":
-					o.moduleName = value != null ? value : "";
-					break;
-				case "--compile-option":
-				case "-C":
-					o.compileOptions.add(value != null ? value : next(args, i++, key));
-					break;
-				case "--enable-preview":
-					o.enablePreview = true;
-					break;
-				case "--enable-assertions":
-				case "-ea":
-					o.enableAssertions = true;
-					break;
-				case "--enable-system-assertions":
-				case "-esa":
-					o.enableSystemAssertions = true;
-					break;
-				case "--cds":
-					o.cds = true;
-					break;
 				case "--runtime-option":
 				case "-R":
 					o.runtimeOptions.add(value != null ? value : next(args, i++, key));
@@ -192,15 +138,13 @@ public final class Main {
 					}
 					break;
 				default:
-					if (a.startsWith("-C") && a.length() > 2) {
-						o.compileOptions.add(a.substring(2));
-					} else if (a.startsWith("-D") && a.length() > 2) {
+					if (a.startsWith("-D") && a.length() > 2) {
 						String prop = a.substring(2);
 						int p = prop.indexOf('=');
 						o.properties.put(p > 0 ? prop.substring(0, p) : prop, p > 0 ? prop.substring(p + 1) : "");
 					} else if (a.startsWith("-R")) {
 						o.runtimeOptions.add(a.substring(2));
-					} else if (a.startsWith("-") && !a.equals("-")) {
+					} else if (a.startsWith("-")) {
 						throw new ExitException(ExitException.EXIT_INVALID_INPUT, "Unknown option: " + a);
 					} else {
 						o.script = a;
@@ -225,39 +169,21 @@ public final class Main {
 			return args.get(i);
 		}
 
-		Project project() throws IOException {
-			Path file;
-			Path baseDir = null;
-			if (script.equals("-")) {
-				file = StdinScript.store(System.in);
-				baseDir = Util.getCwd();
-			} else {
-				file = Paths.get(script);
-				if (!Files.isRegularFile(file)) {
-					if (Files.isDirectory(file)) {
-						throw new ExitException(ExitException.EXIT_INVALID_INPUT,
-								"Script is a directory, not a .java file: '" + script + "'");
-					}
-					if (!Files.isReadable(file)) {
-						throw new ExitException(ExitException.EXIT_INVALID_INPUT,
-								"Script could not be found or read: '" + script + "'");
-					}
-					// a process substitution or a pipe: read it like stdin
-					try (InputStream in = Files.newInputStream(file)) {
-						file = StdinScript.store(in);
-					}
-					baseDir = Util.getCwd();
-				} else if (!file.toString().endsWith(".java")) {
-					throw new ExitException(ExitException.EXIT_INVALID_INPUT,
-							"Only .java source files are supported by JBangLite: '" + script + "'");
-				}
+		Project project() {
+			Path file = Paths.get(script);
+			if (Files.isDirectory(file)) {
+				throw new ExitException(ExitException.EXIT_INVALID_INPUT,
+						"Script is a directory, not a .java file: '" + script + "'");
 			}
-			Project prj = new Project(file, baseDir, properties, deps, repos, compileOptions, runtimeOptions,
-					javaVersion, mainClass, moduleName);
-			if (enablePreview) {
-				prj.setEnablePreview(true);
+			if (!Files.isRegularFile(file)) {
+				throw new ExitException(ExitException.EXIT_INVALID_INPUT,
+						"Script could not be found or read: '" + script + "'");
 			}
-			return prj;
+			if (!file.toString().endsWith(".java")) {
+				throw new ExitException(ExitException.EXIT_INVALID_INPUT,
+						"Only .java source files are supported by JBangLite: '" + script + "'");
+			}
+			return new Project(file, properties);
 		}
 	}
 
@@ -300,68 +226,18 @@ public final class Main {
 		}
 	}
 
-	/**
-	 * A script read from stdin is kept as a file in the cache, because javac
-	 * wants a file and its name has to match the public class in it. The name
-	 * is taken from the source, the directory from a hash of it, so the same
-	 * input builds into the same place and is reused.
-	 */
-	static final class StdinScript {
-		private static final Pattern PUBLIC_TYPE = Pattern
-			.compile("(?m)^\\s*public\\s+(?:(?:final|abstract|static|sealed|non-sealed)\\s+)*"
-					+ "(?:class|interface|enum|record)\\s+(\\w+)");
-		private static final Pattern ANY_TYPE = Pattern
-			.compile("(?m)^\\s*(?:(?:final|abstract|static|sealed|non-sealed)\\s+)*"
-					+ "(?:class|interface|enum|record)\\s+(\\w+)");
-
-		private StdinScript() {
-		}
-
-		static Path store(InputStream in) throws IOException {
-			// read by hand: readAllBytes on a pipe or a process substitution
-			// asks for the stream's position and fails with "Illegal seek"
-			ByteArrayOutputStream buf = new ByteArrayOutputStream();
-			byte[] chunk = new byte[8192];
-			int n;
-			while ((n = in.read(chunk)) > 0) {
-				buf.write(chunk, 0, n);
-			}
-			byte[] bytes = buf.toByteArray();
-			String source = new String(bytes, StandardCharsets.UTF_8);
-			String name = typeName(source);
-			Path dir = Settings.getCacheDir(Settings.CacheClass.stdin).resolve(Util.sha256(bytes));
-			Path file = dir.resolve(name + ".java");
-			if (!Files.exists(file) || !Arrays.equals(Files.readAllBytes(file), bytes)) {
-				Files.createDirectories(dir);
-				Path tmp = Files.createTempFile(dir, name, ".tmp");
-				Files.write(tmp, bytes);
-				Files.move(tmp, file, StandardCopyOption.REPLACE_EXISTING);
-			}
-			return file;
-		}
-
-		static String typeName(String source) {
-			Matcher m = PUBLIC_TYPE.matcher(source);
-			if (m.find()) {
-				return m.group(1);
-			}
-			m = ANY_TYPE.matcher(source);
-			return m.find() ? m.group(1) : "Script";
-		}
-	}
-
 	private static void printHelp() {
 		realOut.println("jbanglite " + Util.getJBangVersion());
 		realOut.println();
-		realOut.println("Builds and runs a single-file Java program that declares its needs with");
-		realOut.println("//DEPS, //JAVA and //SOURCES comment directives.");
+		realOut.println("Builds and runs a single-file Java program. What it needs - its Java version,");
+		realOut.println("dependencies, sources - is declared in the program with //JAVA, //DEPS and");
+		realOut.println("//SOURCES directives, and JBangLite fetches all of it.");
 		realOut.println();
 		realOut.println("Usage:");
 		realOut.println("  jbanglite [<options>] <script.java> [<args>...]");
 		realOut.println();
 		realOut.println("Options may appear anywhere before the script, '--' ends them, and");
-		realOut.println("everything after the script is passed to it. The script is a .java");
-		realOut.println("file, or '-' to read it from stdin.");
+		realOut.println("everything after the script is passed to it.");
 		realOut.println();
 		realOut.println("Options:");
 		realOut.println("  -h, --help           Print this help and exit");
@@ -371,17 +247,8 @@ public final class Main {
 		realOut.println("  --quiet              Only print errors");
 		realOut.println("  --fresh              Ignore caches and rebuild/re-resolve everything");
 		realOut.println("  -o, --offline        Never access the network");
-		realOut.println("  -j, --java <v>       Use the given Java version (e.g. 17 or 17+)");
-		realOut.println("  -m, --main <c>       Main class to run");
-		realOut.println("  --module[=<name>]    Run as a module, optionally with the given name");
-		realOut.println("  --deps <gav,...>     Additional dependencies");
-		realOut.println("  --repos <repo,...>   Additional Maven repositories");
-		realOut.println("  -C<option>           Additional compiler option");
-		realOut.println("  -R<option>           Additional JVM option when running");
 		realOut.println("  -Dkey=value          System property for directive substitution and the script");
-		realOut.println("  --enable-preview     Activate Java preview features");
-		realOut.println("  -ea, -esa            Enable (system) assertions");
-		realOut.println("  --cds                Use class data sharing");
+		realOut.println("  -R<option>           Additional JVM option when running");
 		realOut.println();
 		realOut.println("--version and --update are answered by the launcher script, which needs");
 		realOut.println("neither this jar nor a JDK for them.");
